// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseQUery all()  1`] = `
Array [
  Checklist {
    "id": 1,
    "name": "Onboarding Rest",
    "tasks": [Function],
  },
  Checklist {
    "id": 2,
    "name": "Project Audit Rest",
    "tasks": [Function],
  },
  Checklist {
    "id": 3,
    "name": "QA Checklist Rest",
    "tasks": [Function],
  },
]
`;

exports[`BaseQUery find()  1`] = `
Checklist {
  "id": 1,
  "name": "Onboarding Rest",
  "tasks": [Function],
}
`;

exports[`BaseQUery includes()  1`] = `
Array [
  Checklist {
    "id": 1,
    "name": "Onboarding Rest",
    "tasks": Array [
      Task {
        "description": "Onboarding REST 1",
        "id": 1,
      },
      Task {
        "description": "Onboarding REST 2",
        "id": 2,
      },
    ],
  },
  Checklist {
    "id": 2,
    "name": "Project Audit Rest",
    "tasks": Array [
      Task {
        "description": "Project Audit Rest 3",
        "id": 3,
      },
      Task {
        "description": "Project Audit Rest 4",
        "id": 4,
      },
    ],
  },
  Checklist {
    "id": 3,
    "name": "QA Checklist Rest",
    "tasks": Array [
      Task {
        "description": "QA Checklist Rest 5",
        "id": 5,
      },
      Task {
        "description": "QA Checklist Rest 6",
        "id": 6,
      },
    ],
  },
]
`;

exports[`BaseQUery where()  1`] = `
Checklist {
  "id": 2,
  "name": "Project Audit Rest",
  "tasks": [Function],
}
`;
